--- a/src/App.css
+++ b/src/App.css
@@ -6,13 +6,18 @@
 
 body {
   display: grid;
-  grid-template-columns: 4fr;
-  grid-template-rows: 4fr 1fr;
+  grid-template-rows: auto;
+  grid-template-areas: 
+    "header header header header"
+    "main main  sidebar"
+    "footer footer footer footer";
 }
 
 .sidebar {
+ height: 100vh;
+ width: 15%;
  background-color: rgb(179, 215, 239);
- grid-area: 1 / col4-start / last-line / 5;
+ 
 }
 
 .sidebar-items {
