--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,10 @@ body {
 }
 
 
+.page-container{
+  display:flex;
+  justify-content:space-between;
+}
 
 .sidebar {
  height: 95vh;
@@ -36,17 +40,28 @@ body {
   height: 60%;
   width: 50%;
   color:black ;
-  border: 2px solid red;
+  border: 5px solid rgb(218, 212, 57);
 }
 
 .icon{
-  border: 2px solid red;
+  border: 3px solid red;
   height: 150px;
 }
 
 .main-content{
   width: 60%;
-  border: 2px solid red;
+  margin-left: 15%;
+  border: 5px solid rgba(146, 48, 141, 0.592);
+}
+
+.main-content-p{
+  padding: 5% 5% 5% 5%;
+}
+
+.ads {
+  width: auto;
+  height: 30%;
+  border: 5px solid rgb(71, 159, 20);
 }
 
 .footer{
