--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,10 @@ body {
   border: 5px solid rgb(218, 212, 57);
 }
 
+.home-icon{
+  width: 50px;
+}
+
 .icon{
   border: 3px solid red;
   height: 150px;
