--- a/src/App.css
+++ b/src/App.css
@@ -43,13 +43,10 @@ body {
   border: 5px solid rgb(218, 212, 57);
 }
 
-/* .icon{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  vertical-align:auto;
-  border: 3px salmon solid;
-} */
+.icons:hover {
+  cursor: pointer;
+  color: #fff;
+}
 
 
 .main-content{
