--- a/src/App.css
+++ b/src/App.css
@@ -58,10 +58,11 @@ body {
 .main-content h1 {
   display:flex;
   justify-content:space-around;
+  padding-bottom: 5%;
 }
 
 .main-content-p{
-  padding: 5% 5% 10% 5%;
+  padding: 5% 5% 5% 5%;
 }
 
 .ads {
